Portrait stuck button fix

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -474,11 +474,11 @@ div.footerButtons {
   }
   #buttons.stuck .buttons button.author:nth-of-type(2) {
     width: 40vw;
-    left: 33.5vw;
+    left: 32vw;
   }
   #buttons.stuck .buttons button.author:nth-of-type(3) {
-    width: 28vw;
-    left: 73vw;
+    width: 30vw;
+    left: 70vw;
   }
   #buttons {
     width: 100%;
